<resources>
    <string name="app_name">Charlas Cibertec</string>
    <string name="txt_Copyright">Copyright © 2019</string>
    <string name="txt_Usuario">Usuario</string>
    <string name="txt_Password">Password</string>
    <string name="btn_Login">LOGIN</string>
    <string name="btn_Registrarse">REGISTRARSE</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Charlas Cibertec</string>
    <string name="nav_header_subtitle">Usuario: Eramirez</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_charla">Charlas</string>
    <string name="menu_asistencia">Asistencias</string>
    <string name="menu_expositor">Expositores</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_salir">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Lista de Charlas</string>
    <string name="ProfilePhotoPath">ProfilePhotoPath</string>


    <string name="title_activity_charla_maps">Map</string>

    <string name="sp_file_mensajes_key">sp_file_mensaje_key</string>
    <string name="session_campo_correo">campo_correo</string>


</resources>
