<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_charla">

    <fragment
        android:id="@+id/nav_charla"
        android:name="example.proyectocibertec.CharlasFragment"
        android:label="@string/menu_charla"
        tools:layout="@layout/fragment_charlas" />

    <fragment
        android:id="@+id/nav_asistencia"
        android:name="example.proyectocibertec.AsistenciaFragment"
        android:label="@string/menu_asistencia"
        tools:layout="@layout/fragment_asistencia" />

    <fragment
        android:id="@+id/nav_expositor"
        android:name="example.proyectocibertec.ExpositorFragment"
        android:label="@string/menu_expositor"
        tools:layout="@layout/fragment_expositor" />

    <fragment
        android:id="@+id/nav_productos"
        android:name="example.proyectocibertec.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />

</navigation>